--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <script async src="sort.js"></script>
 </head>
 <body>
-    <h1>Selection Sort</h1>
-    <div class="blockSort"></div>
-    <button id="btnSort">Отсортировать</button>
+    <div class="app">
+        <h1 class="title">Selection Sort</h1>
+        <div class="blockSort"></div>
+        <button id="btnSort" class="btnSort">Отсортировать</button>
+    </div>
 </body>
 
 </html>
